Created an analysis tab and started working on an HBase read method.

--- a/public/contact.partial.html
+++ b/public/contact.partial.html
@@ -1,1 +1,6 @@
 <h1>Contact</h1>
+
+<address>
+  <strong class="lead">José Devezas</strong><br>
+  <a href="mailto:joseluisdevezas@gmail.com">joseluisdevezas@gmail.com</a>
+</address>
