--- a/public/about.partial.html
+++ b/public/about.partial.html
@@ -1,1 +1,9 @@
 <h1>About</h1>
+
+<p class="lead">Lyrics Analyzer is a simple web application built to
+  experiment with Play Framework and Scala, combined with a Single-Page
+  Application pattern based on AngularJS and using a Bootstrap design.</p>
+
+<p class="lead">Besides being a programmer's playground, we also
+  provide an aggregated analysis of a set of user-selected lyrics,
+  showing word clouds for the most relevant terms.</p>
