--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,18 @@
 <!-- Custom styles for this template -->
 <link href="stylesheets/main.css" rel="stylesheet">
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
+<script type="text/javascript"
+  src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
 <script type="text/javascript" src="javascripts/app.js"></script>
 <script type="text/javascript" src="javascripts/controllers.js"></script>
-<script type="text/javascript" src="https://raw.github.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-0.6.0.min.js"></script>
+<script type="text/javascript"
+  src="https://raw.github.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-0.6.0.min.js"></script>
 </head>
 
 <body>
 
-  <div class="navbar navbar-inverse navbar-fixed-top" ng-controller="NavCtrl">
+  <div class="navbar navbar-inverse navbar-fixed-top"
+    ng-controller="NavCtrl">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle"
@@ -37,18 +40,26 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li ng-class="{active: isActive('/home')}"><a href="#/home">Home</a></li>
-          <li ng-class="{active: isActive('/upload')}"><a href="#/upload">Upload</a></li>
-          <li ng-class="{active: isActive('/about')}"><a href="#/about">About</a></li>
-          <li ng-class="{active: isActive('/contact')}"><a href="#/contact">Contact</a></li>
+          <li ng-class="{active: isActive('/home')}"><a
+            href="#/home">Home</a></li>
+          <li ng-class="{active: isActive('/upload')}"><a
+            href="#/upload">Upload</a></li>
+            <li ng-class="{active: isActive('/analyze')}"><a
+            href="#/analyze">Analyze</a></li>
+          <li ng-class="{active: isActive('/about')}"><a
+            href="#/about">About</a></li>
+          <li ng-class="{active: isActive('/contact')}"><a
+            href="#/contact">Contact</a></li>
         </ul>
       </div>
     </div>
   </div>
 
- 
-  <div class="container" ng-view>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-7 center" ng-view></div>
+    </div>
   </div>
-    
+
 </body>
 </html>
