Now listing songs using the REST service. Implemented word cloud, but there's still a bug that triggers update event many times, so it's not working.

--- a/public/about.partial.html
+++ b/public/about.partial.html
@@ -1,9 +1,16 @@
-<h1>About</h1>
+<div class="row">
+  <div class="col-lg-7 center">
 
-<p class="lead">Lyrics Analyzer is a simple web application built to
-  experiment with Play Framework and Scala, combined with a Single-Page
-  Application pattern based on AngularJS and using a Bootstrap design.</p>
+    <h1>About</h1>
 
-<p class="lead">Besides being a programmer's playground, we also
-  provide an aggregated analysis of a set of user-selected lyrics,
-  showing word clouds for the most relevant terms.</p>
+    <p class="lead">Lyrics Analyzer is a simple web application
+      built to experiment with Play Framework and Scala, combined with a
+      Single-Page Application pattern based on AngularJS and using a
+      Bootstrap design.</p>
+
+    <p class="lead">Besides being a programmer's playground, we also
+      provide an aggregated analysis of a set of user-selected lyrics,
+      showing word clouds for the most relevant terms.</p>
+
+  </div>
+</div>
