--- a/public/contact.partial.html
+++ b/public/contact.partial.html
@@ -1,6 +1,12 @@
-<h1>Contact</h1>
+<div class="row">
+  <div class="col-lg-7 center">
 
-<address>
-  <strong class="lead">José Devezas</strong><br>
-  <a href="mailto:joseluisdevezas@gmail.com">joseluisdevezas@gmail.com</a>
-</address>
+    <h1>Contact</h1>
+
+    <address>
+      <strong class="lead">José Devezas</strong><br> <a
+        href="mailto:joseluisdevezas@gmail.com">joseluisdevezas@gmail.com</a>
+    </address>
+
+  </div>
+</div>
