--- a/public/home.partial.html
+++ b/public/home.partial.html
@@ -1,13 +1,17 @@
-<div class="text-center" style="margin-top: 20px">
-  <div class="jumbotron">
-    <h1>Lyrics Analyzer</h1>
-    <p class="lead">
-      You can upload lyrics and selectively analyze their terms.<br>
-      Press <a href="#/upload">upload</a> to add your favorite songs
-      lyrics.
-    </p>
-    <img alt="Parental Advisory: Explicit Lyrics"
-      src="images/Parental-advisory-explicit-lyrics.jpg"
-      style="margin-top: 20px">
+<div class="row">
+  <div class="col-lg-7 center text-center" style="margin-top: 20px">
+  
+    <div class="jumbotron">
+      <h1>Lyrics Analyzer</h1>
+      <p class="lead">
+        You can upload lyrics and selectively analyze their terms.<br>
+        Press <a href="#/upload">upload</a> to add your favorite songs
+        lyrics.
+      </p>
+      <img alt="Parental Advisory: Explicit Lyrics"
+        src="images/Parental-advisory-explicit-lyrics.jpg"
+        style="margin-top: 20px">
+    </div>
+    
   </div>
 </div>
