--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,13 @@
 
 <script type="text/javascript"
   src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.3/d3.min.js"></script>
-<script type="text/javascript"
-  src="https://raw.github.com/jasondavies/d3-cloud/master/d3.layout.cloud.js"></script>
+<script type="text/javascript" src="javascripts/d3.layout.cloud.js"></script>
+<script type="text/javascript" src="javascripts/stopwords.js"></script>
 <script type="text/javascript" src="javascripts/cloud.js"></script>
 
 <script type="text/javascript" src="javascripts/app.js"></script>
 <script type="text/javascript" src="javascripts/services.js"></script>
+<script type="text/javascript" src="javascripts/modules.js"></script>
 <script type="text/javascript" src="javascripts/controllers.js"></script>
 </head>
 
